# whispera

./: .dockerignore  .gitattributes  .gitignore  .golangci.yml  Dockerfile  Makefile  NOTEBOOK_PLACEHOLDER.ipynb  README.md  build-all-platforms.bat  build.sh  build_dll.ps1  build_sidecar.ps1  client_config.yaml  config.yaml  convert_global.go  docker-compose.yml  docker_test_datapath.sh  docker_test_datapath2.sh  docker_test_datapath3.sh  go.mod  go.sum  hex2b64.go  install.sh  key_check_advanced.go  key_debug.go  package-lock.json  remove-old-adapters.ps1  run.ps1  setup-xhttp.sh  update.sh
.claude/: settings.json  settings.local.json
client-package-tauri/: README.md  build-all-platforms.bat  build-all-platforms.sh  build-all.bat  download-wintun.ps1  package-lock.json  package.json  run-dev.bat  run.bat  vite.config.js  Новый текстовый документ.txt
client-package-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client-package-tauri/src-tauri/resources/: mihomo-config.yaml
client-package-tauri/src-tauri/src/: http_utils.rs  main.rs  types.rs
client-package-tauri/src-tauri/src/binary_manager/: go_client.rs  mod.rs  search_utils.rs  wintun.rs
client-package-tauri/src-tauri/src/commands/: go_client.rs  mod.rs  network.rs  system.rs
client-package-tauri/src-tauri/src/go_client/: args.rs  mod.rs  supervisor.rs
configs/: auth-service.yaml  discord-voip.yaml  modular-client.yaml  modular-server.yaml
docs/: discord-voip-optimization.md  fsm_failures.md
ml_engine/: Dockerfile  __init__.py  anomaly_detector.py  api_server.py  best_lstm_model.h5  data_collector.py  dpi_detector.py  model_manager.py  monitoring.py  requirements-client.txt  requirements-server.txt  requirements-train.txt  requirements.txt  traffic_classifier.py  train_models.py  train_onnx_models.py  training_report.json
ml_models/: gorgonia_mlp.json
mobile/: goclient.go
mobile-aar/: README.md  go.mod  mobile.go
monitoring/: docker-compose.yml  prometheus.yml
neural/: backoff_agent.go  (+44 more)
whisp/src-tauri/: Cargo.toml  tauri.conf.json
whisp/src-tauri/capabilities/: migrated.json
whisp/src-tauri/src/: go_client.rs  main.rs  mihomo.rs  ml_server.rs
(+1264 files in other folders)
