[package]
name = "whispera-client"
version = "0.1.0"
description = "Whispera VPN Client"
authors = ["Jalaveyan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "shell-sidecar", "shell-open", "process-command-api", "window-all" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
